--- a/style.css
+++ b/style.css
@@ -17,8 +17,11 @@ body {
     color:black;
 }
 
-.dark-mode {
-    background-color: black;
-    color: white;
-    border: black
+.glass {
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 20px;
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
