--- a/style.css
+++ b/style.css
@@ -8,11 +8,16 @@
     background-image: url(title.jpeg);
     text-shadow:0px 0px 20px black;
     font-size: 35px;
-    color:white;
+    color: white;
 }
 
 body {
     background-color:white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color:black;
+}
+
+.blur {
+    filter:blur(5px);
+    -webkit-filter:blur(5px)
 }
