--- a/style.css
+++ b/style.css
@@ -16,3 +16,10 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color:black;
 }
+
+footer {
+    text-align: center;
+    padding: 5px;
+    background-color: lightgray;
+    color: black;
+}
