--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@
     color: white;
 }
 
-body {
-    background-color:white;
+h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color:black;
 }
