--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+body {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+footer {
+    text-align: center;
+    padding: 5px;
+    background-color: lightgray;
+    color: black;
+}
+
 #title {
     width: vw;
     border: 10px solid black;
@@ -9,16 +20,4 @@
     text-shadow:0px 0px 20px black;
     font-size: 35px;
     color: white;
-}
-
-h1 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color:black;
-}
-
-footer {
-    text-align: center;
-    padding: 5px;
-    background-color: lightgray;
-    color: black;
 }
