--- a/style.css
+++ b/style.css
@@ -37,24 +37,19 @@ footer {
 
 @media (prefers-color-scheme: dark) {
     body {
-        background-color:rgb(0, 0, 0);
-        color:white;
-        transition: background-color 1s;
-        transition: color 1s;
+        background-color: rgb(0, 0, 0)
     }
 
     footer {
-        background-color: rgb(30,30,30);
-        transition: background-color 1s;
+        background-color: rgb(30,30,30)
     }
 
     a:visited {
         color:blueviolet;
-        transition: color 1s
     }
 
     #title {
         border: 10px solid white;
-        transition: border 1s
     }
+transition: all 1s
 }
