--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: Comfortaa, sans-serif;
-    transition: all 1s
+    transition: all 0.25s
 }
 
 footer {
@@ -38,7 +38,8 @@ footer {
 
 @media (prefers-color-scheme: dark) {
     body {
-        background-color: rgb(0, 0, 0)
+        background-color: rgb(0, 0, 0);
+        color: white
     }
 
     footer {
