updated the color of the navbar again

--- a/style.css
+++ b/style.css
@@ -75,6 +75,6 @@ footer {
 }
 
 .topnav a.active {
-  background-color: rgb(218,177,218);
+  background-color: rgb(207, 159, 255);
   color: white;
 }
