--- a/style.css
+++ b/style.css
@@ -48,12 +48,14 @@ a {
     text-shadow:0px 0px 15px black;
     font-size: 35px;
     color: white;
+    weight: normal;
 }
 
 .section-header {
     text-align: center;
     font-size: 25px;
     width: auto;
+    weight: normal;
 }
 
 .text {
