--- a/style.css
+++ b/style.css
@@ -48,14 +48,14 @@ a {
     text-shadow:0px 0px 15px black;
     font-size: 35px;
     color: white;
-    weight: normal;
+    font-weight: normal;
 }
 
 .section-header {
     text-align: center;
     font-size: 25px;
     width: auto;
-    weight: normal;
+    font-weight: normal;
 }
 
 .text {
